finished every route for pokemon

--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ APP_SECRET=37bf69b22303a4ae4ad7537c5c1daaee
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
-DATABASE_URL="mysql://root:@localhost:3306/piscine_blog_php?serverVersion=8.0&charset=utf8"
+DATABASE_URL="mysql://root:@localhost:3306/piscine_blog_symfony?charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
